HOTT-687 Fix Legal Base column visibility (only for XI).

--- a/app/webpacker/src/stylesheets/_tables.scss
+++ b/app/webpacker/src/stylesheets/_tables.scss
@@ -101,14 +101,14 @@ table.small-table {
         }
       }
 
-      td:nth-of-type(1):before { content: 'Country'; }
-      td:nth-of-type(2):before { content: 'Measure type'; }
-      td:nth-of-type(3):before { content: 'Duty rate'; }
-      td:nth-of-type(4):before { content: 'Conditions'; }
-      td:nth-of-type(5):before { content: 'Exclusions'; }
-      td:nth-of-type(6):before { content: 'Legal base'; }
-      td:nth-of-type(7):before { content: 'Date(s)'; }
-      td:nth-of-type(8):before { content: 'Footnotes'; }
+      td.country-col:before { content: 'Country'; }
+      td.measure-type-col:before { content: 'Measure type'; }
+      td.duty-rate-col:before { content: 'Duty rate'; }
+      td.conditions-col:before { content: 'Conditions'; }
+      td.exclusions-col:before { content: 'Exclusions'; }
+      td.legal-base-col:before { content: 'Legal base'; }
+      td.dates-col:before { content: 'Date(s)'; }
+      td.footnotes-col:before { content: 'Footnotes'; }
     }
 
     @media (min-width: $small-table-breakpoint) {
